--- a/api/package.json
+++ b/api/package.json
@@ -18,24 +18,26 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate": "npx node-pg-migrate up --migrations-dir migrations -d postgres://postgres:Spiridon_2017@localhost:5432/areal_hr"
+    "migrate": "npx node-pg-migrate up --migrations-dir migrations -d postgres://postgres:Spiridon_2017@localhost:5432/areal_hr",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/sequelize": "^10.0.1",
     "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "node-pg-migrate": "^7.7.1",
+    "dotenv": "^16.4.5",
+    "node-pg-migrate": "^7.8.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2",
-    "typeorm": "^0.3.20"
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -56,9 +58,9 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
