--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "api",
+  "workspaces": [
+    "docs",
+    "api",
+    "app"
+  ],
   "version": "0.0.1",
   "dependencies": {
     "node-pg-migrate": "^7.7.1"
   },
   "scripts": {
     "start": "nest start",
-    "migrate": "node-pg-migrate"
+    "migrate": "node-pg-migrate",
+    "dev": "vitepress dev docs"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "vite": "^5.4.11",
+    "vitepress": "^1.5.0"
   }
 }
