--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "multer": "^1.4.5-lts.1",
