Fix: todo fixes in .gitignore & sequelize.config

--- a/api/package.json
+++ b/api/package.json
@@ -39,6 +39,7 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-session": "^1.0.2",
+    "path": "^0.12.7",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.0",
