--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 # Database settings
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=areal_hr
-DB_USER=postgres
-DB_PASSWORD=generate_password
+PGHOST=localhost
+PGPORT=5432
+PGDATABASE=areal_hr
+PGUSER=postgres
+PGPASSWORD=Spiridon_2017
 
 # Server settings
 API_PORT=3000
 FRONTEND_URL=http://localhost:9000
+SESSION_SECRET=session_secret
 
 # Docker settings
 DOCKER_DB_VOLUME=
