Fix: history of changes (in process)

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -17,6 +17,7 @@
     "paths": {
       "*": ["*", "src/*"],
       "@models/*": ["src/models/*"],
+      "@app/*": ["src/*"],
     },
     "incremental": true,
     "strictNullChecks": false,
