Fix: session bugs (in process)

--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,19 +1,47 @@
+daemon off;
+
 server {
     listen 80;
     server_name localhost;
 
+    # Основной root для фронтенда
     root /usr/share/nginx/html;
     index index.html;
 
+    # Прокси для API
+    location /api/ {
+        proxy_pass http://backend:3000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Прокси для логов
+    location /logs/ {
+        proxy_pass http://backend:3000/logs;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Обработка статических файлов фронтенда
     location / {
+        root /usr/share/nginx/html;
+        index index.html;
         try_files $uri /index.html;
     }
 
+    # Кэширование статических ресурсов
     location ~* \.(ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|otf|json)$ {
         expires 6M;
         access_log off;
         add_header Cache-Control "public";
     }
 
-    error_page 404 /index.html;  # Обработка 404 ошибки
+    # Обработка 404 ошибки
+    error_page 404 /index.html;
 }
