--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3.9'
-
 volumes:
   db_data:
+  backend_logs:
 
 services:
   db:
@@ -25,8 +24,9 @@ services:
       - "3000:3000"
     volumes:
       - ./api:/usr/src/app
+      - backend_logs:/var/log/backend
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=development
       - PGHOST=db
       - PGPORT=5432
       - PGDATABASE=areal_hr
@@ -34,6 +34,11 @@ services:
       - PGPASSWORD=Spiridon_2017
     depends_on:
       - db
+    logging:
+      driver: json-file
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   frontend:
     build:
@@ -45,6 +50,7 @@ services:
       - ./app:/usr/src/app
     environment:
       - VUE_ROUTER_MODE=history
+      - VUE_APP_DEBUG=true
     depends_on:
       - backend
 
