--- a/app/package.json
+++ b/app/package.json
@@ -14,16 +14,18 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.14",
+    "@vue/compiler-sfc": "^3.5.13",
     "axios": "^1.2.1",
     "joi": "^17.13.3",
     "pinia": "^2.0.11",
     "quasar": "^2.16.0",
-    "vue": "^3.4.18",
+    "vue": "^3.5.13",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^1.9.0",
+    "@quasar/app-vite": "^1.11.0",
     "@types/node": "^20.14.8",
+    "@types/vue": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "autoprefixer": "^10.4.2",
@@ -31,7 +33,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
-    "typescript": "~5.5.4",
+    "typescript": "^5.7.2",
     "vite-plugin-checker": "^0.8.0",
     "vue-tsc": "^2.0.29"
   },
