--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "extends": "@quasar/app-vite/tsconfig-preset",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "src/*": ["src/*"]
+    },
+    "types": ["vite/client", "vue"]
   },
   "exclude": [
     "./dist",
