--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,5 +1,3 @@
-daemon off;
-
 server {
     listen 80;
     server_name localhost;
@@ -16,16 +14,11 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-    }
 
-    # Прокси для логов
-    location /logs/ {
-        proxy_pass http://backend:3000/logs;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        add_header 'Access-Control-Allow-Credentials' 'true';
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
     }
 
     # Обработка статических файлов фронтенда
