--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "migrate": "sequelize db:migrate",
+    "migrate:undo": "sequelize db:migrate:undo",
+    "migrate:undo:all": "sequelize db:migrate:undo:all",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -43,7 +46,6 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.5",
-    "sequelize-cli": "^6.6.2",
     "sequelize-typescript": "^2.1.6",
     "uuid": "^11.0.3"
   },
@@ -67,6 +69,7 @@
     "express-session": "^1.18.1",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "sequelize-cli": "^6.6.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
