--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "quasar-project",
   "version": "0.0.1",
   "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "productName": "HRAction",
   "author": "VladimirRudenk0 <131373045+VladimirRudenk0@users.noreply.github.com>",
   "private": true,
   "scripts": {
