--- a/containers/nginx/nginx.conf
+++ b/containers/nginx/nginx.conf
@@ -1,40 +1,49 @@
+# Сервер для фронтенда на порту 80
 server {
     listen 80;
     server_name localhost;
 
-    # Основной root для фронтенда
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html;  # Путь для фронтенда
     index index.html;
 
-    # Прокси для API
-    location /api/ {
-        proxy_pass http://backend:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
-        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization';
-    }
-
-    # Обработка статических файлов фронтенда
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # Кэширование статических ресурсов
-    location ~* \.(ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg|otf|json)$ {
+    location ~* \.(ico|css|js|json|pdf|woff2?|eot|ttf|svg|otf)$ {
         expires 6M;
         access_log off;
         add_header Cache-Control "public";
     }
 
-    # Обработка 404 ошибки
     error_page 404 /index.html;
+}
+
+server {
+    listen 5173;
+    server_name localhost;
+
+    root /usr/share/nginx/html/src;  # Путь к документации
+
+    index index.html;
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Статические файлы
+    location /assets/ {
+        root /usr/share/nginx/html/;  # Указываем корневую папку для статики
+        try_files $uri $uri/ =404;
+    }
+
+    # Другие типы статики (шрифты, изображения, etc)
+    location ~* \.(ico|css|js|json|pdf|woff2?|eot|ttf|svg|otf)$ {
+        root /usr/share/nginx/html/;
+        expires 6M;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    error_page 404 /index.html;  # При 404 возвращать index.html
 }
