--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.13.3",
     "pinia": "^2.0.11",
     "quasar": "^2.17.5",
+    "vite": "^2.9.18",
     "vue": "^3.5.13",
     "vue-router": "^4.0.12"
   },
@@ -35,7 +36,7 @@
     "prettier": "^2.5.1",
     "typescript": "^5.7.2",
     "vite-plugin-checker": "^0.8.0",
-    "vue-tsc": "^2.0.29"
+    "vue-tsc": "~2.1.6"
   },
   "engines": {
     "node": "^20 || ^18 || ^16",
