--- a/docs/package.json
+++ b/docs/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vitepress dev",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:serve": "vitepress serve docs"
+    "build": "vitepress build",
+    "serve": "vitepress serve"
   },
   "keywords": [],
   "author": "",
